--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -625,6 +625,348 @@
    "source": [
     "!dvc status"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checkout different Versions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting git log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mcommit 3b04052025e336e41dba9b34c19979ddde504f5c\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mmain\u001b[m\u001b[33m, \u001b[m\u001b[1;31morigin/main\u001b[m\u001b[33m)\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 18:10:18 2023 +0530\n",
+      "\n",
+      "    Second Split 37\n",
+      "\n",
+      "\u001b[33mcommit 7eda936db5773bfd8f14a81c222eba24b13ed5e5\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 18:09:55 2023 +0530\n",
+      "\n",
+      "    seond split\n",
+      "\n",
+      "\u001b[33mcommit ebb8d9e034a82321295bc3ba7b8044ffe3c8cfb4\u001b[m\u001b[33m (\u001b[m\u001b[1;33mtag: v1.0\u001b[m\u001b[33m)\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:53:30 2023 +0530\n",
+      "\n",
+      "    First Split 42\n",
+      "\n",
+      "\u001b[33mcommit d1ab32da26043d4a4ee492035b17ab39ba746064\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:52:31 2023 +0530\n",
+      "\n",
+      "    till first split\n",
+      "\n",
+      "\u001b[33mcommit 22b95fa3548542decf4a9c302cbbfc08dc0970dc\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:52:01 2023 +0530\n",
+      "\n",
+      "    data dvc init\n",
+      "\n",
+      "\u001b[33mcommit d7f0ba22fcb7c6a8868c4760762a0fdeca888f43\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:51:48 2023 +0530\n",
+      "\n",
+      "    dvc init\n",
+      "\n",
+      "\u001b[33mcommit 3394d180512f8f0126d18fcef828271e5de7fd06\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:49:59 2023 +0530\n",
+      "\n",
+      "    fresh_start\n",
+      "\n",
+      "\u001b[33mcommit 71a6ce6b717b3eb26eed85c6eff7947d1bde1f75\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:42:54 2023 +0530\n",
+      "\n",
+      "    first_split\n",
+      "\n",
+      "\u001b[33mcommit adf6873f0df97342132ecf07a352e3680a2610e8\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:38:58 2023 +0530\n",
+      "\n",
+      "    fresh start\n",
+      "\n",
+      "\u001b[33mcommit 3e81394cf7f4c565d57dc74a6ba742410f141acb\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:35:09 2023 +0530\n",
+      "\n",
+      "    split files\n",
+      "\n",
+      "\u001b[33mcommit 3c2a93e6dc371b61a8af3dafd3e5cd8f40fb18b6\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:34:43 2023 +0530\n",
+      "\n",
+      "    dvc files\n",
+      "\n",
+      "\u001b[33mcommit f17b3cc2d62843e7d96222bd0ef88815c3aa84ce\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Sun Feb 26 17:24:20 2023 +0530\n",
+      "\n",
+      "    fresh_start\n",
+      "\n",
+      "\u001b[33mcommit bb9ae72470425870e1bb4f27cd3cc8afe7c8e14a\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Wed Feb 1 00:17:52 2023 +0530\n",
+      "\n",
+      "    v1.1\n",
+      "\n",
+      "\u001b[33mcommit 2e526b523efb291ceedd94d1435489ab1fdf73e1\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 23:58:51 2023 +0530\n",
+      "\n",
+      "    v1.0\n",
+      "\n",
+      "\u001b[33mcommit 60c70cdbbd5ef6de7989a9aaa36024ce1724b3e9\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 23:28:54 2023 +0530\n",
+      "\n",
+      "    v1.0\n",
+      "\n",
+      "\u001b[33mcommit 68f2e5bd38199d937f1c12e4d43156d82d9e0609\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 22:24:30 2023 +0530\n",
+      "\n",
+      "    v1.0\n",
+      "\n",
+      "\u001b[33mcommit 627d821f1335e52efaab04a42c1000a51c3dde31\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 22:24:15 2023 +0530\n",
+      "\n",
+      "    v1.0\n",
+      "\n",
+      "\u001b[33mcommit 37ef5e3d24f4bd6f9d297b0c151e136bcfac43ef\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 22:21:35 2023 +0530\n",
+      "\n",
+      "    processed data list of words\n",
+      "\n",
+      "\u001b[33mcommit efa0fa3f20b5a48f88dac07e21376814192f7735\u001b[m\n",
+      "Author: Rohan Dharmadhikari <drohan.1994@gmail.com>\n",
+      "Date:   Tue Jan 31 22:21:19 2023 +0530\n",
+      "\n",
+      "    raw_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git log"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking out version - \"First Split 42\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous HEAD position was 3b04052 Second Split 37\n",
+      "HEAD is now at ebb8d9e First Split 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git checkout ebb8d9e034a82321295bc3ba7b8044ffe3c8cfb4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0% Checkout|                                       |0/1 [00:00<?,     ?file/s]\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_0.00/205k [00:00<?,        ?B/s]\u001b[A\n",
+      "100% Checkout|███████████████████████████████████|1/1 [00:00<00:00, 15.01file/s]\u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/45.8k [00:00<?,        ?B/s]\u001b[A\n",
+      "  0% Checkout|                                   |2/? [00:00<00:00, 24.22file/s]\u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/44.6k [00:00<?,        ?B/s]\u001b[A\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mtrain_data.csv\u001b[0m                       \u001b[A\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mtest_data.csv\u001b[0m\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mval_data.csv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc checkout"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting distribution of sms_labels in split files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_label_dist(file_path):\n",
+    "    file_labels, file_words = get_list_from_csv(file_path)\n",
+    "\n",
+    "    ham_count = file_labels.count(\"ham\")\n",
+    "    spam_count = file_labels.count(\"spam\")\n",
+    "\n",
+    "    print(\"Ham: {}, Spam: {}\".format(ham_count, spam_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Split (42)\n",
+      "Training dataset:\n",
+      "Ham: 3403, Spam: 498\n",
+      "Validation dataset:\n",
+      "Ham: 712, Spam: 124\n",
+      "Testing dataset:\n",
+      "Ham: 712, Spam: 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First Split (42)\")\n",
+    "print(\"Training dataset:\")\n",
+    "get_label_dist(train_path)\n",
+    "print(\"Validation dataset:\")\n",
+    "get_label_dist(val_path)\n",
+    "print(\"Testing dataset:\")\n",
+    "get_label_dist(test_path)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking out version - \"Second Split 37\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous HEAD position was ebb8d9e First Split 42\n",
+      "HEAD is now at 3b04052 Second Split 37\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git checkout 3b04052025e336e41dba9b34c19979ddde504f5c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0% Checkout|                                       |0/1 [00:00<?,     ?file/s]\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/44.0k [00:00<?,        ?B/s]\u001b[A\n",
+      "100% Checkout|███████████████████████████████████|1/1 [00:00<00:00, 12.54file/s]\u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_0.00/207k [00:00<?,        ?B/s]\u001b[A\n",
+      "  0% Checkout|                                   |2/? [00:00<00:00, 20.54file/s]\u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/43.6k [00:00<?,        ?B/s]\u001b[A\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mtest_data.csv\u001b[0m                        \u001b[A\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mtrain_data.csv\u001b[0m\n",
+      "\u001b[33mM\u001b[0m       ..\u001b[35m/data/\u001b[0m\u001b[95mval_data.csv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc checkout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Split (42)\n",
+      "Training dataset:\n",
+      "Ham: 3394, Spam: 507\n",
+      "Validation dataset:\n",
+      "Ham: 719, Spam: 117\n",
+      "Testing dataset:\n",
+      "Ham: 714, Spam: 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First Split (42)\")\n",
+    "print(\"Training dataset:\")\n",
+    "get_label_dist(train_path)\n",
+    "print(\"Validation dataset:\")\n",
+    "get_label_dist(val_path)\n",
+    "print(\"Testing dataset:\")\n",
+    "get_label_dist(test_path)"
+   ]
   }
  ],
  "metadata": {
