--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -178,6 +178,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Replacing labels by 0/1: Spam = 1; Ham = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_labels()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Model 1: Multinomial Naive Bayes"
    ]
   },
@@ -617,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
