--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,27 +757,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "'../tracking/MLFlow_Logs/mlruns' does not exist.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m mlflow\u001b[39m.\u001b[39mset_tracking_uri(\u001b[39m'\u001b[39m\u001b[39m../tracking/MLFlow_Logs/mlruns\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[39m#set experiment\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m mlflow\u001b[39m.\u001b[39;49mset_experiment(\u001b[39m'\u001b[39;49m\u001b[39mSMS Spam Classification Model Evaluation\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/tracking/fluent.py:112\u001b[0m, in \u001b[0;36mset_experiment\u001b[0;34m(experiment_name, experiment_id)\u001b[0m\n\u001b[1;32m    110\u001b[0m client \u001b[39m=\u001b[39m MlflowClient()\n\u001b[1;32m    111\u001b[0m \u001b[39mif\u001b[39;00m experiment_id \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 112\u001b[0m     experiment \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39;49mget_experiment_by_name(experiment_name)\n\u001b[1;32m    113\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m experiment:\n\u001b[1;32m    114\u001b[0m         _logger\u001b[39m.\u001b[39minfo(\n\u001b[1;32m    115\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mExperiment with name \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does not exist. Creating a new experiment.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    116\u001b[0m             experiment_name,\n\u001b[1;32m    117\u001b[0m         )\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/tracking/client.py:451\u001b[0m, in \u001b[0;36mMlflowClient.get_experiment_by_name\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    420\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_experiment_by_name\u001b[39m(\u001b[39mself\u001b[39m, name: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Optional[Experiment]:\n\u001b[1;32m    421\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    422\u001b[0m \u001b[39m    Retrieve an experiment by experiment name from the backend store\u001b[39;00m\n\u001b[1;32m    423\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    449\u001b[0m \u001b[39m        Lifecycle_stage: active\u001b[39;00m\n\u001b[1;32m    450\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 451\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_tracking_client\u001b[39m.\u001b[39;49mget_experiment_by_name(name)\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/tracking/_tracking_service/client.py:220\u001b[0m, in \u001b[0;36mTrackingServiceClient.get_experiment_by_name\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_experiment_by_name\u001b[39m(\u001b[39mself\u001b[39m, name):\n\u001b[1;32m    216\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    217\u001b[0m \u001b[39m    :param name: The experiment name.\u001b[39;00m\n\u001b[1;32m    218\u001b[0m \u001b[39m    :return: :py:class:`mlflow.entities.Experiment`\u001b[39;00m\n\u001b[1;32m    219\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 220\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstore\u001b[39m.\u001b[39;49mget_experiment_by_name(name)\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py:310\u001b[0m, in \u001b[0;36mFileStore.get_experiment_by_name\u001b[0;34m(self, experiment_name)\u001b[0m\n\u001b[1;32m    302\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpagination_wrapper_func\u001b[39m(number_to_get, next_page_token):\n\u001b[1;32m    303\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msearch_experiments(\n\u001b[1;32m    304\u001b[0m         view_type\u001b[39m=\u001b[39mViewType\u001b[39m.\u001b[39mACTIVE_ONLY,\n\u001b[1;32m    305\u001b[0m         max_results\u001b[39m=\u001b[39mnumber_to_get,\n\u001b[1;32m    306\u001b[0m         filter_string\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mname = \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mexperiment_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    307\u001b[0m         page_token\u001b[39m=\u001b[39mnext_page_token,\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m experiments \u001b[39m=\u001b[39m get_results_from_paginated_fn(\n\u001b[1;32m    311\u001b[0m     paginated_fn\u001b[39m=\u001b[39;49mpagination_wrapper_func,\n\u001b[1;32m    312\u001b[0m     max_results_per_page\u001b[39m=\u001b[39;49mSEARCH_MAX_RESULTS_THRESHOLD,\n\u001b[1;32m    313\u001b[0m     max_results\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m,\n\u001b[1;32m    314\u001b[0m )\n\u001b[1;32m    315\u001b[0m \u001b[39mreturn\u001b[39;00m experiments[\u001b[39m0\u001b[39m] \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(experiments) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/utils/__init__.py:248\u001b[0m, in \u001b[0;36mget_results_from_paginated_fn\u001b[0;34m(paginated_fn, max_results_per_page, max_results)\u001b[0m\n\u001b[1;32m    246\u001b[0m     page_results \u001b[39m=\u001b[39m paginated_fn(num_to_get, next_page_token)\n\u001b[1;32m    247\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 248\u001b[0m     page_results \u001b[39m=\u001b[39m paginated_fn(max_results_per_page, next_page_token)\n\u001b[1;32m    249\u001b[0m all_results\u001b[39m.\u001b[39mextend(page_results)\n\u001b[1;32m    250\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(page_results, \u001b[39m\"\u001b[39m\u001b[39mtoken\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m page_results\u001b[39m.\u001b[39mtoken:\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py:303\u001b[0m, in \u001b[0;36mFileStore.get_experiment_by_name.<locals>.pagination_wrapper_func\u001b[0;34m(number_to_get, next_page_token)\u001b[0m\n\u001b[1;32m    302\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpagination_wrapper_func\u001b[39m(number_to_get, next_page_token):\n\u001b[0;32m--> 303\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msearch_experiments(\n\u001b[1;32m    304\u001b[0m         view_type\u001b[39m=\u001b[39;49mViewType\u001b[39m.\u001b[39;49mACTIVE_ONLY,\n\u001b[1;32m    305\u001b[0m         max_results\u001b[39m=\u001b[39;49mnumber_to_get,\n\u001b[1;32m    306\u001b[0m         filter_string\u001b[39m=\u001b[39;49m\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mname = \u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m{\u001b[39;49;00mexperiment_name\u001b[39m}\u001b[39;49;00m\u001b[39m'\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m    307\u001b[0m         page_token\u001b[39m=\u001b[39;49mnext_page_token,\n\u001b[1;32m    308\u001b[0m     )\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py:274\u001b[0m, in \u001b[0;36mFileStore.search_experiments\u001b[0;34m(self, view_type, max_results, filter_string, order_by, page_token)\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[39mif\u001b[39;00m max_results \u001b[39m>\u001b[39m SEARCH_MAX_RESULTS_THRESHOLD:\n\u001b[1;32m    268\u001b[0m     \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[1;32m    269\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mInvalid value for max_results. It must be at most \u001b[39m\u001b[39m{\u001b[39;00mSEARCH_MAX_RESULTS_THRESHOLD\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    270\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m but got \u001b[39m\u001b[39m{\u001b[39;00mmax_results\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    271\u001b[0m         INVALID_PARAMETER_VALUE,\n\u001b[1;32m    272\u001b[0m     )\n\u001b[0;32m--> 274\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_root_dir()\n\u001b[1;32m    275\u001b[0m experiment_ids \u001b[39m=\u001b[39m []\n\u001b[1;32m    276\u001b[0m \u001b[39mif\u001b[39;00m view_type \u001b[39m==\u001b[39m ViewType\u001b[39m.\u001b[39mACTIVE_ONLY \u001b[39mor\u001b[39;00m view_type \u001b[39m==\u001b[39m ViewType\u001b[39m.\u001b[39mALL:\n",
-      "File \u001b[0;32m~/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py:173\u001b[0m, in \u001b[0;36mFileStore._check_root_dir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    170\u001b[0m \u001b[39mRun checks before running directory operations.\u001b[39;00m\n\u001b[1;32m    171\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m exists(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot_directory):\n\u001b[0;32m--> 173\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does not exist.\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot_directory)\n\u001b[1;32m    174\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_directory(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot_directory):\n\u001b[1;32m    175\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is not a directory.\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot_directory)\n",
-      "\u001b[0;31mException\u001b[0m: '../tracking/MLFlow_Logs/mlruns' does not exist."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/02/26 19:42:35 INFO mlflow.tracking.fluent: Experiment with name 'SMS Spam Classification Model Evaluation' does not exist. Creating a new experiment.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='../tracking/MLFlow_Logs/mlruns/217659261940286806', creation_time=1677420755636, experiment_id='217659261940286806', last_update_time=1677420755636, lifecycle_stage='active', name='SMS Spam Classification Model Evaluation', tags={}>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -793,22 +791,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 33\u001b[0m\n\u001b[1;32m     31\u001b[0m mlflow\u001b[39m.\u001b[39mlog_param(\u001b[39m\"\u001b[39m\u001b[39mAlpha\u001b[39m\u001b[39m\"\u001b[39m,i)\n\u001b[1;32m     32\u001b[0m \u001b[39m#Running the model\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m model_metrics \u001b[39m=\u001b[39m kmeans_model(x_train_tf, y_train, x_val_tf, y_val, i)\n\u001b[1;32m     34\u001b[0m \u001b[39m#Logging metrics\u001b[39;00m\n\u001b[1;32m     35\u001b[0m mlflow\u001b[39m.\u001b[39mlog_metric(\u001b[39m\"\u001b[39m\u001b[39mAccuracy\u001b[39m\u001b[39m\"\u001b[39m, model_metrics[\u001b[39m0\u001b[39m])\n",
-      "Cell \u001b[0;32mIn[15], line 13\u001b[0m, in \u001b[0;36mkmeans_model\u001b[0;34m(x_train_tf, y_train, x_val_tf, y_val, clusters)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m val_clus_pred:\n\u001b[1;32m     11\u001b[0m     y_valid_pred\u001b[39m.\u001b[39mappend(y_rep_class[i])\n\u001b[0;32m---> 13\u001b[0m acc_score \u001b[39m=\u001b[39m accuracy_score(y_val, y_pred)\n\u001b[1;32m     15\u001b[0m \u001b[39m# Computing Precision and Recall\u001b[39;00m\n\u001b[1;32m     16\u001b[0m precision, recall, thresholds \u001b[39m=\u001b[39m precision_recall_curve(y_val, y_pred)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "md_name = \"Multinomial Naive Bayes\" \n",
     "for i in np.arange(0.05, 2.25, 0.25):\n",
@@ -840,7 +825,7 @@
     "    with mlflow.start_run() as run: \n",
     "        #Log parameters\n",
     "        mlflow.log_param(\"Model\",md_name)\n",
-    "        mlflow.log_param(\"Alpha\",i)\n",
+    "        mlflow.log_param(\"Clusters\",i)\n",
     "        #Running the model\n",
     "        model_metrics = kmeans_model(x_train_tf, y_train, x_val_tf, y_val, i)\n",
     "        #Logging metrics\n",
