--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,14 +941,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Split (42)\n",
+      "Second Split (37)\n",
       "Training dataset:\n",
       "Ham: 3394, Spam: 507\n",
       "Validation dataset:\n",
@@ -959,7 +959,7 @@
     }
    ],
    "source": [
-    "print(\"First Split (42)\")\n",
+    "print(\"Second Split (37)\")\n",
     "print(\"Training dataset:\")\n",
     "get_label_dist(train_path)\n",
     "print(\"Validation dataset:\")\n",
